# clox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
,github/workflows/: test.yml
.github/workflows/: test.yml
src/: CMakeLists.txt  buffer.c  buffer.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  line.c  line.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: CMakeLists.txt  common.c  common.h  main.c  test_arrays.c  test_classes.c  test_control_flows.c  test_expressions.c  test_functions.c  test_state.c
